subdir('redfish')

install_data('DMTF_Redfish_logo_2017.svg', install_dir: 'share/www/')
install_data('redfish.css', install_dir: 'share/www/')
install_subdir('google', install_dir: 'share/www/google/', strip_directory : true)
install_subdir('styles', install_dir: 'share/www/styles/', strip_directory : true)
